@@ -94,6 +94,9 @@ Release 2.7.1 - UNRELEASED
 
     YARN-4041. Slow delegation token renewal can severely prolong RM recovery. Contributed by Sunil G
 
+    YARN-3476. Nodemanager can fail to delete local logs if log aggregation
+    fails (Rohith via jlowe)
+
 Release 2.7.0 - 2015-04-20
 
   INCOMPATIBLE CHANGES
